// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macro should not add componentId with a config disabling ssr: should not add componentId with a config disabling ssr 1`] = `
"
import styled from '../../macro'

styled.div\`
  background: \${p => (p.error ? 'red' : 'green')};
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"styled-components\\";

_styled.div.withConfig({
  displayName: \\"macrotest\\",
  componentId: \\"sc-11gvsec-0\\"
})([\\"background:\\", \\";\\"], p => p.error ? 'red' : 'green');
"
`;

exports[`macro should work when extending a component: should work when extending a component 1`] = `
"
import React from 'react'
import styled from '../../macro'

const Hello = () => React.createComponent(div, null, 'hello')

styled(Hello)\`
  background: red;
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"styled-components\\";
import React from 'react';

const Hello = () => React.createComponent(div, null, 'hello');

_styled(Hello).withConfig({
  displayName: \\"macrotest\\",
  componentId: \\"sc-11gvsec-0\\"
})([\\"background:red;\\"]);
"
`;

exports[`macro should work with custom import name: should work with custom import name 1`] = `
"
import myStyled from '../../macro'
import styled from 'another-package'

myStyled.div\`
  background: \${p => (p.error ? 'red' : 'green')};
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"styled-components\\";
import styled from 'another-package';

_styled.div.withConfig({
  displayName: \\"macrotest\\",
  componentId: \\"sc-11gvsec-0\\"
})([\\"background:\\", \\";\\"], p => p.error ? 'red' : 'green');
"
`;

exports[`macro should work with require() to import styled-components: should work with require() to import styled-components 1`] = `
"
const styled = require('../../macro')

styled.div\`
  background: red;
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"styled-components\\";

_styled.div.withConfig({
  displayName: \\"macrotest\\",
  componentId: \\"sc-11gvsec-0\\"
})([\\"background:red;\\"]);
"
`;

exports[`macro should work with styled: should work with styled 1`] = `
"
import styled from '../../macro'

styled.div\`
  background: \${p => (p.error ? 'red' : 'green')};
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"styled-components\\";

_styled.div.withConfig({
  displayName: \\"macrotest\\",
  componentId: \\"sc-11gvsec-0\\"
})([\\"background:\\", \\";\\"], p => p.error ? 'red' : 'green');
"
`;
